# img_2_pdf

./: .gitignore  README.md  camscan_hybrid_tool.py  fast.py  img_2_pdf.py  imgs_and_pdfs_ocr_fast_STABLE.py  only_tesseract.py  prepare pdf to tesseract.py  pyproject.toml
OCRmypdf_plugins/ocrmypdf-surya-main/: README.md  pyproject.toml
OCRmypdf_plugins/ocrmypdf-surya-main/ocrmypdf_surya/: __init__.py  hocr.py  plugin.py
docs/: SETUP_4080_PC.md  auto_crop_benchmark_plan.md  auto_crop_plan.md  ocr_benchmark_plan.md  ocr_env_strategy.md  ocr_searchable_pdf_execution_plan.md  ocr_testing_plan.md  searchable_pdf_strategy.md  unification_plan.md
docs/benchmark_runs/: 2026-03-27_ocr_olmocr_only_final.md  2026-03-30_searchable_from_txt_all_models.md  2026-03-30_searchable_from_txt_recheck.md
scripts/: benchmark_ocr_matrix.ps1  compare_ocr_results.py  install_local_ocrmypdf_plugins.ps1
src/uniscan/: __init__.py  cli.py
src/uniscan/core/: __init__.py  geometry.py  pipeline.py  preprocess.py  scanner_adapter.py
src/uniscan/export/: __init__.py  exporters.py
src/uniscan/io/: __init__.py  loaders.py
src/uniscan/ocr/: __init__.py  artifact_searchable.py  benchmark.py  canonical.py  engine.py
src/uniscan/session/: capture_session.py
src/uniscan/ui/: __init__.py  (+2 more)
tests/: test_capture_session.py  test_crop_benchmark.py  test_exporters.py  test_geometry.py  test_loaders.py  test_ocr_artifact_searchable.py  test_ocr_benchmark.py  test_ocr_canonical.py  test_ocr_engine.py  test_ocr_preprocessing.py  test_preprocess.py  test_scanner_adapter.py  test_ui_page_parse.py
(+1 files in other folders)
